using java 11 compiler instead of java 8